# dtu-02476-mlops

./: .gitignore  Dockerfile  Makefile  README.md  example.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: example.yml  test.yml  test_macos.yml  test_windows.yml
data/processed/: train_target.pt
dockerfiles/: Dockerfile  trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
tests/: test_data.py  test_model.py
workspace/: __init__.py  train_model.py
workspace/data/: make_dataset.py
workspace/models/: model.py
